# iqoption

./: CMakeLists.txt  Readme
client/: client.py  generator.py
resources/: commands
src/: CMakeLists.txt  DataProvider.cpp  DataProvider.h  RawCmdDataProvider.cpp  RawCmdDataProvider.h  Session.cpp  Session.h  StatService.cpp  StatService.h  Storage.cpp  Storage.h  TCPServer.cpp  TCPServer.h  UserBid.cpp  UserBid.h  UserDataMgr.cpp  UserDataMgr.h  Utils.cpp  Utils.h  main.cpp
